# the_last_necromancer

./: .gitignore  Cargo.toml  README.md
src/: arena.rs  asset_loader.rs  camera.rs  collision.rs  death.rs  debug_panel.rs  enemy.rs  global_components.rs  helper.rs  input.rs  main.rs  minion.rs  pathfinding.rs  player.rs  projectiles.rs  selection_box.rs  sfx.rs  ui.rs  win_lose.rs
web/: index.html
