[package]
name = "the_last_necromancer"
version = "0.1.0"
authors = ["pieroluha <pieroluha@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[features]
default = [
    "bevy/bevy_winit",
    "bevy/bevy_render",        # Rendering framework core
    "bevy/bevy_core_pipeline", # Higher-level rendering abstractions
    "bevy/bevy_sprite",        # 2D (sprites) rendering
    "bevy/bevy_text",          # Text/font rendering
    "bevy/bevy_ui",   
    "bevy/png",
    "bevy/x11",
    "bevy_kira_audio/ogg",
]
dev = ["bevy/dynamic", "bevy-inspector-egui"]

[target.x86_64-pc-windows-msvc]
linker = "lld"
rustflags = [
  "-Lnative=/home/pieroluha/.local/lib/xwin/crt/lib/x86_64",
  "-Lnative=/home/pieroluha/.local/lib/xwin/sdk/lib/um/x86_64",
  "-Lnative=/home/pieroluha/.local/lib/xwin/sdk/lib/ucrt/x86_64"
]

# ???
#[target.'cfg(target_os = "linux")'.dependencies]
#winit = { version = "0.25", features=["x11"]}

[dependencies]
bevy = { version = "0.7.0", default-features = false }
bevy-inspector-egui = { version = "0.10.0", optional = true }
bevy_asset_loader = "0.10.0"
bevy_kira_audio = "0.9.0"
bevy_prototype_debug_lines = "0.6.1"
bevy_tweening = "0.4.0"
leafwing_input_manager = { git = "https://github.com/Leafwing-Studios/leafwing_input_manager", branch = "dev" }
petitset = "0.2.1"
fastrand = "1.7.0"
#bevy_framepace = "0.3.0"
