[package]
name = "the_last_necromancer"
version = "0.1.0"
authors = ["pieroluha <pieroluha@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[features]
default = [
    "bevy/bevy_winit",
    "bevy/bevy_render",        # Rendering framework core
    "bevy/bevy_core_pipeline", # Higher-level rendering abstractions
    "bevy/bevy_sprite",        # 2D (sprites) rendering
    "bevy/bevy_text",          # Text/font rendering
    "bevy/bevy_ui",   
    "bevy/png",
    "bevy/x11",
    "bevy_kira_audio/ogg",
    "bevy_asset_loader/2d",
    "heron/2d",
    #"bevy_hanabi/2d",
]
dev = ["bevy/dynamic", "bevy-inspector-egui"]


# ???
#[target.'cfg(target_os = "linux")'.dependencies]
#winit = { version = "0.25", features=["x11"]}

[dependencies]
bevy = { version = "0.7.0", default-features = false }
bevy-inspector-egui = { version = "0.10.0", optional = true }
bevy_asset_loader = "0.10.0"
bevy_kira_audio = "0.9.0"
bevy_tweening = "0.4.0"
heron = "3.0.0"
benimator = "3.0.0"                 # Sprite animator plugin
leafwing-input-manager = "0.3.0"    # Input manager plugin
fastrand = "1.7.0"
pathfinding = "3.0.12"
#bevy_hanabi = "0.2.0"               # Particle plugin
#bevy_framepace = "0.4.0"
